...
        icon={{ library: 'MaterialCommunityIcons', name: 'plus', size: 18 }}
        onPress={irParaNovo}
        containerStyle={{ flex: 1 }}
      />
      <FancyButton
        type='text'
        label='Automático'
        icon={{ library: 'MaterialCommunityIcons', name: 'chevron-right', size: 18 }}
        iconPosition='right'
        onPress={irParaAutomatico}
      />
    </View>
  );
...
