...
            onPress={() => router.push('/(auth)/quiz-vendas')}
            containerStyle={{ backgroundColor: Pallete.terciary }}
          />
          <View style={styles.secondaryLinks}>
            <FancyButton
              type='text'
              label='Já tenho conta'
              onPress={() => router.push('/(auth)/login')}
              labelStyle={{ color: Pallete.fonts.inactive }}
            />
            <FancyButton
              type='text'
              label='Sou voluntário, já tenho convite'
...
